# nomad-camels-plugin

./: .cruft.json  .gitignore  LICENSE  MANIFEST.in  README.md  mkdocs.yml  move_template_files.sh  pyproject.toml
docs/: index.md
docs/how_to/: install_this_plugin.md  use_this_plugin.md
src/nomad_camels_plugin/apps/: __init__.py
src/nomad_camels_plugin/normalizers/: __init__.py  camels_normalizer.py
src/nomad_camels_plugin/parsers/: __init__.py  parser.py  utils.py
src/nomad_camels_plugin/schema_packages/: __init__.py  camels_package.py
src/nomad_parser_plugins_camels_files/apps/: __init__.py
src/nomad_parser_plugins_camels_files/normalizers/: __init__.py
src/nomad_parser_plugins_camels_files/parsers/: __init__.py  parser.py  testfile_good.h5  utils.py
src/nomad_parser_plugins_camels_files/schema_packages/: __init__.py  camels_package.py  schema_package.py
tests/data/: test.archive.yaml
tests/data/raw/: test_CAMELS_file.nxs
tests/parsers/: test_parser.py
tests/schema_packages/: test_schema_package.py
